IRepositoryCategory and RepositoryCategory Set Up

--- a/Curry.DataAccess/Curry.DataAccess.csproj
+++ b/Curry.DataAccess/Curry.DataAccess.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Migrations\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Curry.Models\Curry.Models.csproj" />
+  </ItemGroup>
+
 </Project>
