--- a/Curry/Curry.csproj
+++ b/Curry/Curry.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.0" />
   </ItemGroup>
 
 
@@ -24,7 +26,6 @@
 
   <ItemGroup>
     <Folder Include="Pages\Admin\Users\" />
-    <Folder Include="Pages\Admin\Category\" />
     <Folder Include="Pages\Admin\FoodType\" />
     <Folder Include="Pages\Admin\MenuItems\" />
   </ItemGroup>
