--- a/Curry/appsettings.json
+++ b/Curry/appsettings.json
@@ -9,5 +9,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Stripe": {
+    "SecretKey": "sk_test_6IOsTZPgtMvadj0LBXCCUgBZ00SZAiJOaC",
+    "PublishableKey": "pk_test_d28qLXv3wx3B4XAysOFxHN2500Pg3MJ7UC"
+  }
 }
